# StankOS

./: .gitignore  CMakeLists.txt
.github/workflows/: ci.yml
bootloader/: bootloader.cpp  bootloader.hpp
include/: stankos.hpp
src/: main.cpp
tests/: test_bootloader.cpp  test_main.cpp
